# dfq

./: Cargo.toml  README.md
samples/: orders.csv  users.csv  users.json  users.parquet
src/: errors.rs  main.rs
