[package]
name = "dfq"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["sql", "csv", "json", "datafusion", "database"]
authors = ["Xiaoguang Zhang <zhxiaog@outlook.com>"]
description = "A CLI tool for running SQLs over various data sources."
repository = "https://github.com/zhxiaogg/dfq" 

[dependencies]
datafusion = "33"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
clap = { version = "4", features = ["derive"] }
